libsepol: re-work and apply makefile-no-ln-sf-relative.patch

--- a/s/libsepol/package.xml
+++ b/s/libsepol/package.xml
@@ -25,7 +25,15 @@
         <sources>
             <file src="libsepol-2.8.tar.gz" subdir="sources"
                 sha256sum="3ad6916a8352bef0bad49acc8037a5f5b48c56f94e4cb4e1959ca475fa9d24d6"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="c7f24b69fcce0a81b3ac6a69faf9f0445384054e27e58788568a1a6effa7da2f"/>
         </sources>
+
+        <patches>
+            <patchset subdir="sources">
+                <file src="patches/makefile-no-ln-sf-relative.patch"/>
+            </patchset>
+        </patches>
 
         <requires>
             <package name="file"/>
