--- a/m/mawk/package.xml
+++ b/m/mawk/package.xml
@@ -23,12 +23,15 @@
         <sources>
             <file src="mawk-1.3.3.tar.gz" subdir="sources"
                 sha256sum="32649c46063d4ef0777a12ae6e9a26bcc920833d54e1abca7edb8d37481e7485"/>
-            <file src="patches.17.tar.gz" subdir="patches"
-                sha256sum="94e2834e5c30cf8b9c124d2529cc5a2e5641908b36c47a4584229773591db5e0"/>
+            <file src="debian-patches-17.tar.gz" subdir="patches"
+                sha256sum="cc1704cb98567ea1261310a113dcd436630691cf6e1e3de6c1a2d30cb6e434f8"/>
+            <file src="mawk-1.3.3-17.debdiff.gz" subdir="patches"
+                sha256sum="13cb66b6eb5ee654d5626621d5ef476ede6b0bebac18ce765516de810e58490c"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
+                <file src="patches/mawk-1.3.3-17.debdiff"/>
                 <file src="patches/01_error-on-full-fs"/>
                 <file src="patches/02_fix-examples"/>
                 <file src="patches/03_read-and-close-redefinition"/>
