--- a/n/nettle/package.xml
+++ b/n/nettle/package.xml
@@ -24,12 +24,12 @@
         </description>
 
         <sources>
-            <file src="nettle-3.3.tar.gz" subdir="sources"
-                sha256sum="46942627d5d0ca11720fec18d81fc38f7ef837ea4197c1f630e71ce0d470b11e"/>
-            <file src="debian.1.tar.gz" subdir="patches"
-                sha256sum="8df831c9207ebdf83cc13e500acce4a0e86890836d09f571edfb84e16afc8849"/>
+            <file src="nettle-3.4.1.tar.gz" subdir="sources"
+                sha256sum="f941cf1535cd5d1819be5ccae5babef01f6db611f9b5a777bae9c7604b8a92ad"/>
+            <file src="debian-patches-1.tar.gz" subdir="patches"
+                sha256sum="fd3e126f287a2c563c3d848f594bb5d89b230397361b1d4df151a9ee28afeba2"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <file src="patches/fPIC.patch"/>
@@ -40,8 +40,8 @@
         <requires>
             <package name="libgmp-dev"/>
             <package name="m4"/>
-            <package name="autotools-dev" version=">= 20100122.1"/>
             <package name="texinfo"/>
+            <package name="autotools-dev"/>
         </requires>
 
         <xi:include href="rules.xml"/>
