--- a/a/autogen/package.xml
+++ b/a/autogen/package.xml
@@ -25,12 +25,12 @@
         <sources>
             <file src="autogen-5.18.12.tar.xz" subdir="sources"
                 sha256sum="be3ba62e883185b6ee8475edae97d7197d701d6b9ad9c3d2df53697110c1bfd8"/>
-            <file src="debian.3.tar.gz" subdir="patches"
-                sha256sum="84f0a519ccf93d9d74eab1539832091ff6782cb134c19317e8d93b07284cd5d4"/>
-            <file src="bolt.1.tar.gz" subdir="patches"
+            <file src="debian-patches-4.tar.gz" subdir="patches"
+                sha256sum="71596b34e27f4cf1262adc7e1280e2fb8a949e690e8eb4e504554c4a1da589d8"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
                 sha256sum="51b81f0729a5bf5b117231640f6695b06de030a52a56b829a966412bd1eb3986"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <!-- Debian -->
@@ -42,12 +42,21 @@
         </patches>
 
         <requires>
-            <package name="autotools-dev"/>
             <package name="gperf"/>
             <package name="guile-2.0-dev" version=">= 2.0.11+1-0"/>
             <package name="libxml2-dev"/>
             <package name="pkg-config"/>
             <package name="tar" version=">= 1.28"/>
+            <package name="autogen<cross>"/>
+        </requires>
+
+        <requires>
+            <package name="autotools-dev"/>
+            <package name="gperf"/>
+            <package name="guile-2.0-dev"/>
+            <package name="libxml2-dev"/>
+            <package name="pkg-config"/>
+            <package name="tar"/>
         </requires>
 
         <xi:include href="rules.xml"/>
