--- a/p/protobuf/package.xml
+++ b/p/protobuf/package.xml
@@ -23,15 +23,20 @@
                 sha256sum="73fdad358857e120fd0fa19e071a96e15c0f23bb25f85d3f7009abfd4f264a2a"/>
             <file src="debian-patches-2.tar.gz" subdir="patches"
                 sha256sum="155dd25c7bb827c941a08f7007b1d12989f6e0eba986666e266a91eaf4504a6e"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="da51ef5df78c6b6b6a97f978e1154ccf7af813848f61f3f09ed9abbf043f3379"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
+                <!-- Debian -->
                 <file src="patches/hurd.patch"/>
                 <file src="patches/default_python_version"/>
                 <file src="patches/s390x.patch"/>
                 <file src="patches/disable_local_gmock.patch"/>
                 <file src="patches/fix_google_test_link.patch"/>
+                <!-- Bolt -->
+                <file src="patches/genscript-no-bashism.patch"/>
             </patchset>
         </patches>
 
