--- a/g/gdbm/package.xml
+++ b/g/gdbm/package.xml
@@ -19,34 +19,22 @@
         </description>
 
         <sources>
-            <file src="gdbm-1.8.3.tar.bz2" subdir="sources"
-                sha256sum="1d5995b6e9e6be4ff62c8126d019f184a083dd8e6f75f6c74b9fe023b5b9440e"/>
-            <file src="debian.14.tar.gz" subdir="patches"
-                sha256sum="2fb9a314cee96f39cc431468174aecdf317dc08a0c3637992509b413c0b4d720"/>
+            <file src="gdbm-1.18.1.tar.gz" subdir="sources"
+                sha256sum="86e613527e5dba544e73208f42b78b7c022d4fa5a6d5498bf18c8d6f745b91dc"/>
+            <file src="debian-patches-4.tar.gz" subdir="patches"
+                sha256sum="16a859e9a25dca804bff2ea6df961fa76abdeb32e816d12b0fe17417f0ee6a41"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
-                <!-- Debian -->
-                <file src="patches/01_texinfo-usr-local.patch"/>
-                <file src="patches/02_zero-headers.patch"/>
-                <file src="patches/03-Makefile.in.patch"/>
-                <file src="patches/04_fix-gdbm-compat-linking.patch"/>
-                <file src="patches/05_handle-short-read.patch"/>
-                <file src="patches/06_manpage-cleanup.patch"/>
-                <file src="patches/07-link-flags.patch"/>
-                <file src="patches/08-709905-gdbm.texinfo.patch"/>
-                <file src="patches/09-stop-recording-build-date.patch"/>
+                <file src="patches/patch-fix-spelling-error-in-gdbm.3.patch"/>
             </patchset>
         </patches>
 
         <requires>
             <package name="texinfo"/>
-            <package name="libtool"/>
-            <package name="automake"/>
-            <package name="autoconf"/>
-            <package name="autotools-dev"/>
-            <package name="strip-nondeterminism"/>
+            <package name="libreadline-dev"/>
+            <package name="bison"/>
         </requires>
 
         <xi:include href="rules.xml"/>
