dns-root-data: work around GNUisms

--- a/d/dns-root-data/package.xml
+++ b/d/dns-root-data/package.xml
@@ -17,7 +17,15 @@
         <sources>
             <file src="dns-root-data-2019031302.tar.xz" subdir="sources"
                 sha256sum="5606dec8c6641f5c44013efc6394274c98b577f8c0846ea30b808a11c4b3e876"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="937a316c0cb7deeea5bb3620b8233a281d758653ca53a3b79b5a25597f6ab461"/>
         </sources>
+
+        <patches>
+            <patchset subdir="sources">
+                <file src="patches/gnuisms-workaround.diff"/>
+            </patchset>
+        </patches>
 
         <xi:include href="rules.xml"/>
     </source>
