--- a/p/protobuf/package.xml
+++ b/p/protobuf/package.xml
@@ -24,7 +24,7 @@
             <file src="debian-patches-2.tar.gz" subdir="patches"
                 sha256sum="155dd25c7bb827c941a08f7007b1d12989f6e0eba986666e266a91eaf4504a6e"/>
             <file src="bolt-patches-1.tar.gz" subdir="patches"
-                sha256sum="a419bfcbf6b915542a074185b4f978009b7e8b519d00e3b9f9b193545132dcc8"/>
+                sha256sum="beb1e454c9f995e6e730c4b604e38d36973783f75d8ad88df8dab3ecb956a0f6"/>
         </sources>
 
         <patches>
@@ -37,6 +37,7 @@
                 <file src="patches/fix_google_test_link.patch"/>
                 <!-- Bolt -->
                 <file src="patches/genscript-no-bashism.patch"/>
+                <file src="patches/p6337-link-libatomic.diff"/>
             </patchset>
         </patches>
 
