--- a/s/libsigsegv/package.xml
+++ b/s/libsigsegv/package.xml
@@ -18,13 +18,14 @@
             <file src="libsigsegv-2.12.tar.gz" subdir="sources"
                 sha256sum="3ae1af359eebaa4ffc5896a1aee3568c052c99879316a1ab57f8fe1789c390b6"/>
             <file src="bolt-patches-1.tar.gz" subdir="patches"
-                sha256sum="218105a7d08e54d5f7320efbf6ca0b28adfc67a16f38facc26f8d57f33416afd"/>
+                sha256sum="2f2452cdfc2dfe11738ed80519f6131b28faf6546685f7cce1ed2c9705651147"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
                 <!-- Bolt -->
                 <file src="patches/musl-uses-posix-fault.patch"/>
+                <file src="patches/fault-stack-pointer-powerpc.patch"/>
             </patchset>
         </patches>
 
